# DayNeko

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
backend/: requirements.txt
backend/app/: admin.py  main.py
backend/app/admin_static/: app.js  index.html  styles.css
src/: main.tsx  styles.css  types.ts  updateWindow.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src/components/: TimeDashboard.tsx  ui.tsx
src/components/common/: AppNotifications.tsx  AvatarCropDialog.tsx  ChoicePicker.tsx  DateChoicePicker.tsx  GlobalTooltip.tsx  WindowChrome.tsx
src/components/events/: EventList.tsx
src/components/evidence/: EvidenceUploadDialog.tsx  EvidenceViewer.tsx
src/hooks/: useAppNotifications.ts  useTicker.ts
src/lib/: activity.ts  api.ts  color.ts  config.ts  date.ts  evidence.ts  leaderboard.ts  localRecords.ts  media.ts  presence.ts  schedule.ts  state.ts  update.ts
src/pages/: EventsPage.tsx  FriendsPage.tsx  HomePage.tsx  LeaderboardPage.tsx  SettingsPage.tsx
